--- a/src/embeddings/notebook/comparing_distribution.ipynb
+++ b/src/embeddings/notebook/comparing_distribution.ipynb
@@ -24,7 +24,8 @@
     "    </ul>\n",
     "</nav>\n",
     "\n",
-    "<link rel=\"stylesheet\" href=\"../style.css\" />\n"
+    "<link rel=\"stylesheet\" href=\"../style.css\" />\n",
+    "<link rel=\"icon\" type=\"image/x-icon\" href=\"../jupyter_logo_icon.svg\" />\n"
    ]
   },
   {
